# spp

./: AviaryInit.c  AviaryMiscUtils.c  AviaryMiscUtils.h  CMakeLists.txt  Process.h  README.md  TAGS  _main.c  athr_atomics.c  athr_atomics.h  athr_membar.h  athr_mutex.h  athread.c  athread.h  atomic.h  aviary_alloc.c  aviary_alloc.h  aviary_atomic.h  aviary_cpu_topology.c  aviary_cpu_topology.h  aviary_errno.h  aviary_init.c  aviary_main.c  aviary_misc_utils.c  aviary_misc_utils.h  aviary_mutex.h  aviary_port.h  aviary_process.c  aviary_process.h  aviary_process_lock.c  aviary_process_lock.h  aviary_smp.h  aviary_threads.h  global.h  sys.h  time.c
